--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "react": "^18.3.1",
+    "react-native": "^0.75.4",
     "tslib": "^2.8.0"
   }
 }
