--- a/package.json
+++ b/package.json
@@ -26,16 +26,22 @@
     "url": "git+https://github.com/gerwld/react-native-drag-n-drop-everywhere.git"
   },
   "devDependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.25.7",
+    "@babel/preset-flow": "^7.25.7",
+    "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "rollup": "^4.24.0",
+    "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.6.3"
   },
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-native": ">=0.75.0"
+  },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-native": "^0.75.4",
     "tslib": "^2.8.0"
   }
 }
