--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   "peerDependencies": {
     "react": ">=18.0.0",
     "react-native": ">=0.75.0",
-    "react-native-reanimated": "^3.16.0",
-    "react-native-gesture-handler": "^2.20.0"
+    "react-native-gesture-handler": ">=2.20.0",
+    "react-native-reanimated": ">=3.16.0"
   },
   "dependencies": {
     "tslib": "^2.8.0"
